addd logic sample todo

--- a/js-todo/index.html
+++ b/js-todo/index.html
@@ -19,7 +19,7 @@
 
     <div class="todo-area">
       <h2 class="todo-area-title">TODO List</h2>
-      <ul class="todo-ul">
+      <ul id="todo-list" class="todo-ul">
         <li class="todo-li">買い物に行く<button type="button">DELETE</button></li>
         <li class="todo-li">お米を炊く<button type="button">DELETE</button></li>
         <li class="todo-li">洗濯をする<button type="button">DELETE</button></li>
